[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.13"
reqwest = "0.12.11"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
chrono = "0.4.39"
serde = "1.0.217"
serde_json = "1.0.134"
rand = "0.8.5"

md5 = "0.7.0"
base64 = "0.22.1"
serde-xml-rs = "0.6.0" 
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto= "fat"
codegen-units = 1
panic="abort"
strip="debuginfo"